--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/multer": "^1.4.12",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
